// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled uui-button button-color-primary root mode-solid color-sky size-36 style-square fill-white size-30"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
  type="button"
/>
`;

exports[`PageButton should be rendered correctly with extra 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable uui-button uui-size-24 button-color-sun root mode-ghost color-sun size-24 style-square fill-light size-24"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption line-height-18 font-size-12 v-padding-2"
  >
    1
  </div>
</button>
`;
